force-app/main/default/objects/LeadInteraction__c/LeadInteraction__c.object-meta.xml
<CustomObject>
    <label>Interações do Lead</label>
    <nameField>
        <displayFormat>LI-{000000000}</displayFormat>
        <label>Interações do Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interações dos leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>