force-app/main/default/objects/LeadInteraction__c/fields/InteresseEmOutrasSolucoes__c.field-meta.xml
<CustomField>
    <fullName>InteresseEmOutrasSolucoes__c</fullName>
    <label>Interesse em outras soluções de energia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>