force-app/main/default/objects/LeadInteraction__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Interações dos leads</relationshipLabel>
    <relationshipName>Interacoes_dos_leads</relationshipName>
    <type>Lookup</type>
</CustomField>