force-app/main/default/objects/LeadInteraction__c/fields/Messaging_User__c.field-meta.xml
<CustomField>
    <fullName>Messaging_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta do Whatsapp</label>
    <referenceTo>MessagingEndUser</referenceTo>
    <relationshipLabel>Interações dos leads</relationshipLabel>
    <relationshipName>Intera_es_dos_leads</relationshipName>
    <type>Lookup</type>
</CustomField>