force-app/main/default/objects/LeadInteraction__c/fields/MessagingSession__c.field-meta.xml
<CustomField>
    <fullName>MessagingSession__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conversa do Whatsapp</label>
    <referenceTo>MessagingSession</referenceTo>
    <relationshipLabel>Interações dos leads</relationshipLabel>
    <relationshipName>Intera_es_dos_leads</relationshipName>
    <type>Lookup</type>
</CustomField>