force-app/main/default/objects/LeadInteraction__c/fields/MotivoErroIntegracao__c.field-meta.xml
<CustomField>
    <fullName>MotivoErroIntegracao__c</fullName>
    <label>Motivo Erro Integração</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>