force-app/main/default/objects/LeadInteraction__c/fields/Produtinteresse__c.field-meta.xml
<CustomField>
    <fullName>Produtinteresse__c</fullName>
    <label>Produto de interesse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>