force-app/main/default/objects/LeadInteraction__c/fields/ResumoInteracao__c.field-meta.xml
<CustomField>
    <fullName>ResumoInteracao__c</fullName>
    <label>Resumo da Interação</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>