force-app/main/default/objects/LeadInteraction__c/fields/TipoImovel__c.field-meta.xml
<CustomField>
    <fullName>TipoImovel__c</fullName>
    <label>Tipo de imóvel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>