force-app/main/default/objects/LeadInteraction__c/fields/TipoTelhado__c.field-meta.xml
<CustomField>
    <fullName>TipoTelhado__c</fullName>
    <label>Tipo do telhado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>