force-app/main/default/objects/LeadInteraction__c/fields/ValorConta__c.field-meta.xml
<CustomField>
    <fullName>ValorConta__c</fullName>
    <label>Valor da Conta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>